# actix-sea-orm

./: .gitignore  Cargo.toml  docker-compose.yml
migration/src/: lib.rs  m20220101_000001_course.rs
tutor-db/: Cargo.toml
tutor-db/src/: database.rs  errors.rs  handlers.rs  main.rs  models.rs  routes.rs
tutor-db/src/handlers/: course.rs
tutor-db/src/models/: course.rs  prelude.rs
