[package]
name = "tutor-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
openssl = { version = "0.10.56", features = ["vendored"] }
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-actix-rustls", "macros"] }
serde = { version = "1.0.183", features = ["derive"] }
